--- a/JogoQuiz_FrontEnd/src/app/Login/login-painel/painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/Login/login-painel/painel.component.html
@@ -24,8 +24,8 @@
                 />
               </div>
               <div class="button">
-                <button type="submit" class="btn btn-primary btn-block">
-                  <strong>Entrar</strong>
+                <button data-mdb-ripple-init type="button" class="btn btn-primary btn-block">
+                  <a routerLink="/Quiz" class="navbar-brand mb-0"><strong>Entrar</strong></a>
                 </button>
               </div>
             </form>
