--- a/JogoQuiz_FrontEnd/src/app/Quiz/quiz-painel/quiz-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/Quiz/quiz-painel/quiz-painel.component.html
@@ -1,1 +1,37 @@
-<p>quiz-painel works!</p>
+<div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title text-center"><strong>Login</strong></h5>
+            <form>
+              <div class="form-group">
+                <label for="email"><strong>Email</strong></label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="Seu email"
+                />
+              </div>
+              <div class="form-group">
+                <label for="senha"><strong>Senha</strong></label>
+                <input
+                  type="password"
+                  class="form-control"
+                  id="senha"
+                  placeholder="Sua senha"
+                />
+              </div>
+              <div class="button">
+                <button data-mdb-ripple-init type="button" class="btn btn-primary btn-block">
+                  <a routerLink="/Quiz" class="navbar-brand mb-0"><strong>Entrar</strong></a>
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
