--- a/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
@@ -1,36 +1,25 @@
 <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title text-center"><strong>Quiz</strong></h5>
-            <form>
-              <div class="form-group">
-                <label *ngFor="let question of questions">{{ question.questionText }}</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="email"
-                  placeholder="Seu email"
-                />
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title text-center"><strong>Quiz</strong></h5>
+          <form>
+            <div class="form-group" *ngFor="let question of questions">
+              <label>{{ question.questionText }}</label>
+              <div *ngFor="let answer of question.answers">
+                <input type="radio" name="question{{ question.id }}" [value]="answer.id">
+                <label>{{ answer.answerText }}</label>
               </div>
-              <div class="form-group">
-                <label for="senha"><strong>Senha</strong></label>
-                <input
-                  type="password"
-                  class="form-control"
-                  id="senha"
-                  placeholder="Sua senha"
-                />
-              </div>
-              <div class="button">
-                <button data-mdb-ripple-init type="button" class="btn btn-primary btn-block">
-                  <a routerLink="/Quiz" class="navbar-brand mb-0"><strong>Entrar</strong></a>
-                </button>
-              </div>
-            </form>
-          </div>
+            </div>
+            <div class="button">
+              <button data-mdb-ripple-init type="button" class="btn btn-primary btn-block">
+                <a routerLink="/Quiz" class="navbar-brand mb-0"><strong>Entrar</strong></a>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
   </div>
+</div>
