--- a/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
@@ -3,13 +3,17 @@
     <div class="col-md-6">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title text-center"><strong>Quiz</strong></h5>
+          <div *ngFor="let question of questions | async">
+            <h5 class="card-title text-center"><strong>{{ question.category }}</strong></h5>
+          </div>
           <form>
-            <div class="form-group" *ngFor="let question of questions | async">
-              <label>{{ question.questionText }}</label>
-              <div *ngFor="let answer of question.answers">
-                <input type="radio" name="question{{ question.id }}" [value]="answer.id">
-                <label>{{ answer.answerText }}</label>
+            <div *ngIf="questions | async as question; else loading">
+              <div class="form-group" *ngFor="let question of questions | async">
+                <label>{{ question.questionText }}</label>
+                <div *ngFor="let answer of question.answers">
+                  <input type="radio" name="question{{ question.id }}" [value]="answer.id">
+                  <label>{{ answer.answerText }}</label>
+                </div>
               </div>
             </div>
             <div class="button">
@@ -19,6 +23,15 @@
             </div>
           </form>
         </div>
+
+        <ng-template #loading>
+          <div class="d-flex justify-content-center">
+            <div class="spinner-border m-5 text-primary" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          </div>
+        </ng-template>
+
       </div>
     </div>
   </div>
