API conectado(Player findById)

--- a/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
@@ -3,22 +3,24 @@
     <div class="col-md-6">
       <div class="card">
         <div class="card-body">
-          <div *ngIf="questionFindById | async as question; else loading">
-            <h5 class="card-title text-center"><strong>{{ question.category }}</strong></h5>
-            <form>
-              <div class="form-group">
-                <label>{{ question.questionText }}</label>
-                <div *ngFor="let answer of question.answers">
-                  <input type="radio" name="question{{ question.id }}" [value]="answer.id">
-                  <label>{{ answer.answerText }}</label>
+          <div *ngIf="playerFindById | async as player; else loading">
+            <ng-container *ngFor="let question of player.question">
+              <h5 class="card-title text-center"><strong>{{ question.category }}</strong></h5>
+              <form>
+                <div class="form-group">
+                  <label>{{ question.questionText }}</label>
+                  <div *ngFor="let answer of question.answers">
+                    <input type="radio" name="question{{ question.id }}" [value]="answer.id">
+                    <label>{{ answer.answerText }}</label>
+                  </div>
                 </div>
-              </div>
-              <div class="button">
-                <button data-mdb-ripple-init type="button" class="btn btn-primary btn-block">
-                  <a routerLink="/Quiz" class="navbar-brand mb-0"><strong>Entrar</strong></a>
-                </button>
-              </div>
-            </form>
+                <div class="button">
+                  <button data-mdb-ripple-init type="button" class="btn btn-primary btn-block">
+                    <a routerLink="/Quiz" class="navbar-brand mb-0"><strong>Entrar</strong></a>
+                  </button>
+                </div>
+              </form>
+            </ng-container>
           </div>
         </div>
 
