--- a/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
@@ -7,19 +7,21 @@
             <ng-container *ngFor="let question of player.question">
               <h5 class="card-title text-center"><strong>{{ question.category }}</strong></h5>
               <form>
-                <div class="progress" role="progressbar" aria-label="Example with label" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress" role="progressbar" aria-valuemin="0" aria-valuemax="100">
                   <div class="progress-bar" [style.width.%]="player.pointScore">{{ player.pointScore }}%</div>
                 </div>
                 <div class="form-group">
                   <label>{{ question.questionText }}</label>
                   <div *ngFor="let answer of question.answers">
-                    <input type="radio" name="question{{ question.id }}" [value]="answer.id">
+                    <input type="radio" name="question{{ question.id }}" [value]="answer.id"
+                      [(ngModel)]="selectedOption">
                     <label>{{ answer.answerText }}</label>
                   </div>
                 </div>
                 <div class="button">
-                  <button data-mdb-ripple-init type="button" class="btn btn-primary btn-block">
-                    <a routerLink="/Quiz" class="navbar-brand mb-0"><strong>Entrar</strong></a>
+                  <button (click)="checkAnswer()" data-mdb-ripple-init type="button"
+                    class="btn btn-primary btn-block">
+                    <strong>Conferir Resposta</strong>
                   </button>
                 </div>
               </form>
