--- a/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
@@ -15,7 +15,7 @@
 
                 <div class="form-group">
                   <label>{{ question.questionText }}</label>
-                  <div *ngFor="let answer of question.answers">
+                  <div *ngFor="let answer of question.answers | orderBy">
                     <input type="radio" name="question{{ question.id }}" [value]="answer.id"
                       [(ngModel)]="selectedOption">
                     <label>{{ answer.answerText }}</label>
