--- a/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
@@ -29,6 +29,9 @@
                     <strong>Conferir Resposta</strong>
                   </button>
                 </div>
+                <div *ngIf="showSpinner" class="spinner">
+                  <span id="loading" class="countdown">{{ countdownValue }}</span>
+                </div>
                 <div class="button d-flex justify-content-center">
                   <button (click)="proximo()" type="button" class="btn btn-secondary btn-sm "><strong>Próximo</strong>
                   </button>
