--- a/JogoQuiz_FrontEnd/src/app/component/Finish/finish-painel/finish-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Finish/finish-painel/finish-painel.component.html
@@ -1,1 +1,25 @@
-<p>finish-painel works!</p>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-body">
+
+          <div class="diamond-wrapper">
+            <div class="diamond-border"></div>
+            <div class="diamond">
+              <div class="diamond2-border"></div>
+              <div class="text">Texto Horizontal</div>
+            </div>
+          </div>
+
+            <div class="button">
+              <button data-mdb-ripple-init type="button" class="btn btn-primary btn-block">
+                <a routerLink="/Quiz" class="navbar-brand mb-0"><strong>Entrar</strong></a>
+              </button>
+            </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
