--- a/JogoQuiz_FrontEnd/src/app/component/Finish/finish-painel/finish-painel.component.css
+++ b/JogoQuiz_FrontEnd/src/app/component/Finish/finish-painel/finish-painel.component.css
@@ -3,13 +3,13 @@
   font-family: 'Courier New', Courier, monospace;
 }
 
-.card-title{
+.card-title {
   color: aliceblue;
   background-color: rgb(121, 146, 173);
   border-radius: 5px;
 }
 
-.button{
+.button {
   display: flex;
   justify-content: center;
   padding-top: 10px;
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 300px;
+  padding: 20px;
 }
 
 .diamond-wrapper {
@@ -31,6 +31,7 @@
   height: 150px;
   margin: 50px auto;
 }
+
 .diamond {
   width: 100%;
   height: 100%;
@@ -40,6 +41,7 @@
   align-items: center;
   position: absolute;
 }
+
 .diamond-border {
   width: 150px;
   height: 150px;
@@ -47,6 +49,7 @@
   position: relative;
   animation: spin 15s linear infinite;
 }
+
 .diamond2-border {
   width: 150px;
   height: 150px;
@@ -54,13 +57,16 @@
   position: relative;
   animation: spin 15s linear infinite;
 }
+
 .diamond .text {
   position: absolute;
   transform: rotate(-45deg);
   color: rgb(22, 1, 1);
   text-align: center;
-  font-size: 16px;
+  font-size: 35px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
