--- a/JogoQuiz_FrontEnd/src/app/component/Finish/finish-painel/finish-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Finish/finish-painel/finish-painel.component.html
@@ -2,22 +2,24 @@
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card">
-        <div class="card-body">
+        <div class="card-body flex-grow-1">
+          <div *ngIf="playerFindById | async as player">
+            <h5 class="card-title text-center"><strong>Pontuação</strong></h5>
 
-          <div class="diamond-wrapper">
-            <div class="diamond-border"></div>
-            <div class="diamond">
-              <div class="diamond2-border"></div>
-              <div class="text">Texto Horizontal</div>
+            <div class="diamond-wrapper">
+              <div class="diamond-border"></div>
+              <div class="diamond">
+                <div class="diamond2-border"></div>
+                <div class="text"><strong>{{ player.pointScore }}</strong></div>
+              </div>
             </div>
-          </div>
 
             <div class="button">
               <button data-mdb-ripple-init type="button" class="btn btn-primary btn-block">
                 <a routerLink="/Quiz" class="navbar-brand mb-0"><strong>Entrar</strong></a>
               </button>
             </div>
-
+          </div>
         </div>
       </div>
     </div>
