--- a/JogoQuiz_FrontEnd/src/app/component/Finish/finish-painel/finish-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Finish/finish-painel/finish-painel.component.html
@@ -15,8 +15,8 @@
             </div>
 
             <div class="button">
-              <button data-mdb-ripple-init type="button" class="btn btn-primary btn-block">
-                <a routerLink="/Quiz" class="navbar-brand mb-0"><strong>Entrar</strong></a>
+              <button (click)="novoJogo()" data-mdb-ripple-init type="button" class="btn btn-primary btn-block">
+                <strong>Novo Jogo</strong>
               </button>
             </div>
           </div>
