--- a/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.css
+++ b/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 300px;
+  padding: 20px;
 }
 
 .correct-answer {
