--- a/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.css
+++ b/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.css
@@ -1,3 +1,9 @@
+
+.card, .card-body {
+  box-sizing: border-box;
+  overflow: hidden; /* ou use overflow: auto se preferir */
+}
+
 .container {
   padding-top: 10%;
   font-family: 'Courier New', Courier, monospace;
@@ -45,7 +51,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 300px;
+  padding: 20px;
 }
 
 .correct-answer {
