--- a/JogoQuiz_FrontEnd/src/app/component/Finish/finish-painel/finish-painel.component.css
+++ b/JogoQuiz_FrontEnd/src/app/component/Finish/finish-painel/finish-painel.component.css
@@ -45,7 +45,7 @@
 .diamond-border {
   width: 150px;
   height: 150px;
-  border: 5px dashed #b8c5d5;
+  border: 5px dashed #debf12;
   position: relative;
   animation: spin 15s linear infinite;
 }
@@ -53,7 +53,7 @@
 .diamond2-border {
   width: 150px;
   height: 150px;
-  border: 5px dashed #b8c5d5;
+  border: 5px dashed #debf12;
   position: relative;
   animation: spin 15s linear infinite;
 }
